Nav Bar functional and comparisons link added

--- a/comparison.html
+++ b/comparison.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Home Page</title>
+  <title>Comparisons</title>
   <link rel="stylesheet" type="text/css" href="Resources/bootstrap.min.css">
 
 </head>
@@ -19,9 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
-            <a class="nav-link active" href="https://henrypoe.github.io/web-design-challenge/">Home
-                <span class="visually-hidden">(current)</span>
-            </a>
+            <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/">Home</a>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
                 <div class="dropdown-menu">
@@ -32,7 +30,9 @@
                 </div>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/comparison">Comparison</a>
+            <a class="nav-link active" href="https://henrypoe.github.io/web-design-challenge/comparison">Comparison
+                <span class="visually-hidden">(current)</span>
+            </a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="#">Data</a>
