added all links to navbar buttons

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Latitude v Temperature</a>
-                    <a class="dropdown-item" href="#">Latitude v Humidity</a>
-                    <a class="dropdown-item" href="#">Latitude v Cloudiness</a>
-                    <a class="dropdown-item" href="#">Latitude v Wind Speed</a>
+                    <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/temperature">Latitude v Temperature</a>
+                    <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/humidity">Latitude v Humidity</a>
+                    <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/cloudiness">Latitude v Cloudiness</a>
+                    <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/wind-speed">Latitude v Wind Speed</a>
                 </div>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/comparison">Comparison</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">Data</a>
+            <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/data">Data</a>
             </li>
         </ul>
         </div>
