--- a/comparison.html
+++ b/comparison.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Comparisons</title>
+  <title>Home Page</title>
   <link rel="stylesheet" type="text/css" href="Resources/bootstrap.min.css">
 
 </head>
@@ -11,36 +11,37 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Weather Data</a>
+        <a class="navbar-brand" href="https://henrypoe.github.io/web-design-challenge/">Weather Data</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-            <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/">Home</a>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Latitude v Temperature</a>
-                    <a class="dropdown-item" href="#">Latitude v Humidity</a>
-                    <a class="dropdown-item" href="#">Latitude v Cloudiness</a>
-                    <a class="dropdown-item" href="#">Latitude v Wind Speed</a>
-                </div>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link active" href="https://henrypoe.github.io/web-design-challenge/comparison">Comparison
-                <span class="visually-hidden">(current)</span>
-            </a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#">Data</a>
-            </li>
-        </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/temperature">Latitude v Temperature</a>
+                        <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/humidity">Latitude v Humidity</a>
+                        <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/cloudiness">Latitude v Cloudiness</a>
+                        <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/wind-speed">Latitude v Wind Speed</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link active" href="https://henrypoe.github.io/web-design-challenge/comparison">Comparison
+                    <span class="visually-hidden">(current)</span>
+                </a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/data">Data</a>
+                </li>
+            </ul>
         </div>
     </div>
     </nav>
+
+    
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
