--- a/data.html
+++ b/data.html
@@ -31,7 +31,9 @@
                 <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/comparison">Comparison</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/data">Data</a>
+                <a class="nav-link active" href="https://henrypoe.github.io/web-design-challenge/data">Data
+                    <span class="visually-hidden">(current)</span>
+                </a>
                 </li>
             </ul>
         </div>
