--- a/temperature.html
+++ b/temperature.html
@@ -21,7 +21,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/temperature">Latitude v Temperature</a>
+                        <a class="dropdown-item active" href="https://henrypoe.github.io/web-design-challenge/temperature">Latitude v Temperature</a>
                         <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/humidity">Latitude v Humidity</a>
                         <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/cloudiness">Latitude v Cloudiness</a>
                         <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/wind-speed">Latitude v Wind Speed</a>
