--- a/wind-speed.html
+++ b/wind-speed.html
@@ -24,7 +24,7 @@
                         <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/temperature">Latitude v Temperature</a>
                         <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/humidity">Latitude v Humidity</a>
                         <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/cloudiness">Latitude v Cloudiness</a>
-                        <a class="dropdown-item" href="https://henrypoe.github.io/web-design-challenge/wind-speed">Latitude v Wind Speed</a>
+                        <a class="dropdown-item active" href="https://henrypoe.github.io/web-design-challenge/wind-speed">Latitude v Wind Speed</a>
                     </div>
                 </li>
                 <li class="nav-item">
