Landing page v1.0 complete

--- a/data.html
+++ b/data.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Home Page</title>
+  <title>Data Page</title>
   <link rel="stylesheet" type="text/css" href="Resources/bootstrap.min.css">
 
 </head>
