--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<body>
+<body style="background-color:#6c757d">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="https://henrypoe.github.io/web-design-challenge/">Weather Data</a>
@@ -38,8 +38,54 @@
     </div>
     </nav>
 
-    
 
+    <div class="card-group">
+        <div class="card border-primary border-3 mt-3 mx-3">
+            <div class="card-header">Summary</div>
+            <div class="card-body">
+                <h3 class="card-title">Latitude vs. Weather Elements</h3>
+                <p class="card-text">The purpose of this project was to analyze how weather changes as you get closer to the equator.
+                    To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500
+                    cities.
+                </p>
+                </br>
+                <p class="card-text">After assembling the dataset, we used Matplotlib to plot various weather elements against the
+                    latitude of each city. The weather elements we looked at are max temperature, humidity, cloudiness, and wind
+                    speed. This site provides the source data and visualizations created as part of the analysis, as well as
+                    explanations and descriptions of any trends and correlations observed.
+                </p>
+            </div>
+        </div>
+        <div class="card border-light mt-3 mx-3">
+            <div class="card-header">Visualizations</div>
+            <div class="card-body">
+                <div class="container">
+                    <div class="row row-cols-2">
+                        <div class="col">
+                            <a href="https://henrypoe.github.io/web-design-challenge/temperature">
+                                <img src="Resources/images/Fig1.png" width="500" height="344">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="https://henrypoe.github.io/web-design-challenge/humidity">
+                                <img src="Resources/images/Fig2.png" width="500" height="344">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="https://henrypoe.github.io/web-design-challenge/cloudiness">
+                                <img src="Resources/images/Fig3.png" width="500" height="344">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="https://henrypoe.github.io/web-design-challenge/wind-speed">
+                                <img src="Resources/images/Fig4.png" width="500" height="344">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
