Wind Speed page complete

--- a/wind-speed.html
+++ b/wind-speed.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Home Page</title>
+  <title>Wind Speed vs Latitude</title>
   <link rel="stylesheet" type="text/css" href="Resources/bootstrap.min.css">
-
 </head>
 
 <body>
@@ -40,6 +39,55 @@
 
     
 
+<div class="container-fluid">
+    <div class="row flex-nowrap">
+        <div class="col py-3">
+            <h3 class="text-primary display-4">&nbsp;&nbsp;<strong>Wind Speed</strong></h3>
+            <hr>
+            <img class="img-fluid ms-5" src="Resources/images/Fig4.png" width="800" height="550">
+            <p class="ms-5 ps-5 text-wrap" style="max-width: 48rem;">
+                The most evident thing from the wind speed analysis is that the majority of locations in our sample had 10 mph wind
+                speeds at the time of the test. I think that it's likely that trend carries over to the whole population of all cities
+                and latitudes. Another observation from this sample is that only the northern hemisphere has any locations with wind
+                speeds over 25 mph. There is a much lower chance that this observation is true of the world as a whole, but it is 
+                unknowable either way from this data set and would require a much larger sample.
+            </p>
+        </div>
+        <div class="col-auto bg-dark">
+            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                    <span class="fs-5 d-none d-sm-inline">Visualizations</span>
+                </a>
+                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start">
+                    <li class="nav-item">
+                        <a class="nav-link text-info" href="https://henrypoe.github.io/web-design-challenge/temperature">Max Temperature</a>
+                        <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/temperature">
+                            <img src="Resources/images/Fig1.png" width="250" height="172">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-info" href="https://henrypoe.github.io/web-design-challenge/humidity">Humidity</a>
+                        <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/humidity">
+                            <img src="Resources/images/Fig2.png" width="250" height="172">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-info" href="https://henrypoe.github.io/web-design-challenge/cloudiness">Cloudiness</a>
+                        <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/cloudiness">
+                            <img src="Resources/images/Fig3.png" width="250" height="172">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-primary" href="https://henrypoe.github.io/web-design-challenge/wind-speed">Wind Speed</a>
+                        <a class="nav-link border border-2 border-primary" href="https://henrypoe.github.io/web-design-challenge/wind-speed">
+                            <img src="Resources/images/Fig4.png" width="250" height="172">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
