--- a/cloudiness.html
+++ b/cloudiness.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Home Page</title>
+  <title>Cloudiness vs Latitude</title>
   <link rel="stylesheet" type="text/css" href="Resources/bootstrap.min.css">
-
 </head>
 
 <body>
@@ -40,6 +39,57 @@
 
     
 
+<div class="container-fluid">
+    <div class="row flex-nowrap">
+        <div class="col py-3">
+            <h3 class="text-primary display-4">&nbsp;&nbsp;<strong>Cloudiness</strong></h3>
+            <hr>
+            <img class="img-fluid ms-5" src="Resources/images/Fig3.png" width="800" height="550">
+            <p class="ms-5 ps-5 text-wrap" style="max-width: 48rem;">
+                Cloudiness seems to be completely random when compared to latitude, with a large number of points in our sample
+                ocurring at 0% cloudiness. This observation should make sense when compared to your personal experience, there are
+                very few ways, and even fewer accurate, ways to predict how cloudy it will be on a given day in a given location.
+                The most interesting observation from this graph is the horizontal lines the points make across the graph. This 
+                could either be caused by the fact that there a certain levels of cloudiness that occur everywhere across the world, 
+                or the much more likelier possibility that the equipment use to take these measurements isn't adequate to take 
+                measurements of cloudiness down to single percentage points.
+            </p>
+        </div>
+        <div class="col-auto bg-dark">
+            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                    <span class="fs-5 d-none d-sm-inline">Visualizations</span>
+                </a>
+                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start">
+                    <li class="nav-item">
+                        <a class="nav-link text-info" href="https://henrypoe.github.io/web-design-challenge/temperature">Max Temperature</a>
+                        <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/temperature">
+                            <img src="Resources/images/Fig1.png" width="250" height="172">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-info" href="https://henrypoe.github.io/web-design-challenge/humidity">Humidity</a>
+                        <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/humidity">
+                            <img src="Resources/images/Fig2.png" width="250" height="172">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-primary" href="https://henrypoe.github.io/web-design-challenge/cloudiness">Cloudiness</a>
+                        <a class="nav-link border border-2 border-primary" href="https://henrypoe.github.io/web-design-challenge/cloudiness">
+                            <img src="Resources/images/Fig3.png" width="250" height="172">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-info" href="https://henrypoe.github.io/web-design-challenge/wind-speed">Wind Speed</a>
+                        <a class="nav-link" href="https://henrypoe.github.io/web-design-challenge/wind-speed">
+                            <img src="Resources/images/Fig4.png" width="250" height="172">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
