made landing page images resizable

--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
                     <div class="row row-cols-2">
                         <div class="col">
                             <a href="https://henrypoe.github.io/web-design-challenge/temperature">
-                                <img src="Resources/images/Fig1.png" width="500" height="344">
+                                <img class="img-fluid" src="Resources/images/Fig1.png" width="500" height="344">
                             </a>
                         </div>
                         <div class="col">
                             <a href="https://henrypoe.github.io/web-design-challenge/humidity">
-                                <img src="Resources/images/Fig2.png" width="500" height="344">
+                                <img class="img-fluid" src="Resources/images/Fig2.png" width="500" height="344">
                             </a>
                         </div>
                         <div class="col">
                             <a href="https://henrypoe.github.io/web-design-challenge/cloudiness">
-                                <img src="Resources/images/Fig3.png" width="500" height="344">
+                                <img class="img-fluid" src="Resources/images/Fig3.png" width="500" height="344">
                             </a>
                         </div>
                         <div class="col">
                             <a href="https://henrypoe.github.io/web-design-challenge/wind-speed">
-                                <img src="Resources/images/Fig4.png" width="500" height="344">
+                                <img class="img-fluid" src="Resources/images/Fig4.png" width="500" height="344">
                             </a>
                         </div>
                     </div>
