--- a/comparison.html
+++ b/comparison.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8">
   <title>Comparison Page</title>
   <link rel="stylesheet" type="text/css" href="Resources/bootstrap.min.css">
-
 </head>
 
-<body>
+<body style="background-color:#6c757d">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="https://henrypoe.github.io/web-design-challenge/">Weather Data</a>
@@ -40,8 +39,54 @@
     </div>
     </nav>
 
-    
+    <div class="container bg-white">
+        <div class="row">
+            <div class="col-12">
+                <p class="display-2 text-success fw-bold">Comparison: Latitude vs. X</p>
+                <hr>
+            </div>
+            <div class="col-12">
+                <p>Click any plot to get an in-depth analysis</p>    <br>
+            </div>
+        </div>
+    </div>
 
+    <div class="container bg-white">
+        <div class="row row-cols-1 row-cols-md-2">
+            <div class="col d-flex flex-column">
+                <p class="text-center text-info fs-2" style="margin-bottom: -0.35rem">vs. Max Temperature</p>
+                <div class="d-flex justify-content-center">
+                    <a href="https://henrypoe.github.io/web-design-challenge/temperature">
+                        <img src="Resources/images/Fig1.png" width="500" height="344">
+                    </a>
+                </div>
+            </div>
+            <div class="col d-flex flex-column">
+                <p class="text-center text-info fs-2" style="margin-bottom: -0.35rem">vs. Humidity</p>
+                <div class="d-flex justify-content-center">
+                    <a href="https://henrypoe.github.io/web-design-challenge/humidity">
+                        <img src="Resources/images/Fig2.png" width="500" height="344">
+                    </a>
+                </div>
+            </div>
+            <div class="col d-flex flex-column">
+                <p class="text-center text-info fs-2" style="margin-bottom: -0.35rem">vs. Cloudiness</p>
+                <div class="d-flex justify-content-center">
+                    <a href="https://henrypoe.github.io/web-design-challenge/cloudiness">
+                        <img src="Resources/images/Fig3.png" width="500" height="344">
+                    </a>
+                </div>
+            </div>
+            <div class="col d-flex flex-column">
+                <p class="text-center text-info fs-2" style="margin-bottom: -0.35rem">vs. Wind Speed</p>
+                <div class="d-flex justify-content-center">
+                    <a href="https://henrypoe.github.io/web-design-challenge/wind-speed">
+                        <img src="Resources/images/Fig4.png" width="500" height="344">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
