--- a/data.html
+++ b/data.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="Resources/bootstrap.min.css">
 </head>
 
-<body class="bg-dark bg-gradient">
+<body style="background-color:#6c757d">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="https://henrypoe.github.io/web-design-challenge/">Weather Data</a>
