--- a/comparison.html
+++ b/comparison.html
@@ -57,7 +57,7 @@
                 <p class="text-center text-info fs-2" style="margin-bottom: -0.35rem">vs. Max Temperature</p>
                 <div class="d-flex justify-content-center">
                     <a href="https://henrypoe.github.io/web-design-challenge/temperature">
-                        <img src="Resources/images/Fig1.png" width="500" height="344">
+                        <img class="img-fluid" src="Resources/images/Fig1.png" width="500" height="344">
                     </a>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                 <p class="text-center text-info fs-2" style="margin-bottom: -0.35rem">vs. Humidity</p>
                 <div class="d-flex justify-content-center">
                     <a href="https://henrypoe.github.io/web-design-challenge/humidity">
-                        <img src="Resources/images/Fig2.png" width="500" height="344">
+                        <img class="img-fluid" src="Resources/images/Fig2.png" width="500" height="344">
                     </a>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                 <p class="text-center text-info fs-2" style="margin-bottom: -0.35rem">vs. Cloudiness</p>
                 <div class="d-flex justify-content-center">
                     <a href="https://henrypoe.github.io/web-design-challenge/cloudiness">
-                        <img src="Resources/images/Fig3.png" width="500" height="344">
+                        <img class="img-fluid" src="Resources/images/Fig3.png" width="500" height="344">
                     </a>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 <p class="text-center text-info fs-2" style="margin-bottom: -0.35rem">vs. Wind Speed</p>
                 <div class="d-flex justify-content-center">
                     <a href="https://henrypoe.github.io/web-design-challenge/wind-speed">
-                        <img src="Resources/images/Fig4.png" width="500" height="344">
+                        <img class="img-fluid" src="Resources/images/Fig4.png" width="500" height="344">
                     </a>
                 </div>
             </div>
